Fix: z-index

--- a/src/app/smn-ui/button/button.component.scss
+++ b/src/app/smn-ui/button/button.component.scss
@@ -328,7 +328,7 @@ $sizes: 480 600 840 960 1280 1440 1600;
 @each $size in $sizes {
     .ui-s#{$size} {
         .ui-fab-container {
-            z-index: 1;
+            z-index: 2;
             transition: all 280ms ui-easing('deceleration');
 
             top: 128px;
